@@ -12,8 +12,6 @@ use Unexpected::Functions  qw( throw );
 my @banished_keywords = ( META );
 
 my @block_attributes  = qw(  );
-my @moo_attributes    = qw( builder clearer coerce handles init_arg is isa
-   predicate trigger lazy reader weak_ref writer );
 my @page_attributes   = qw(  );
 
 # Public functions
@@ -25,12 +23,6 @@ sub import {
    my ($class, @args) = @_;
 
    my $target = caller;
-
-   for my $want (grep { not $target->can($_) } qw(has)) {
-      throw 'Method [_1] not found in class [_2]', [$want, $target];
-   }
-
-   my $has = $target->can('has');
    my @target_isa = @{ mro::get_linear_isa($target) };
    my $method = META;
    my $meta;
@@ -39,9 +31,9 @@ sub import {
       # Don't add this to a role. The ISA of a role is always empty!
       if ($target->can( $method )) { $meta = $target->$method }
       else {
-         my $meta_config = { default_meta_config, target => $target, @args };
+         my $attr = { default_meta_config, target => $target, @args };
 
-         $meta = HTML::Forms::Meta->new($meta_config);
+         $meta = HTML::Forms::Meta->new($attr);
          install_sub { as => $method, into => $target, code => sub {
             return $meta;
          }, };
@@ -53,9 +45,9 @@ sub import {
       $meta = $target->$method;
    }
 
+   my $rt_info_key = 'non_methods';
    my $info = $Role::Tiny::INFO{ $target };
    my $apply = sub { $meta->add_to_apply_list( shift ); return };
-   my $rt_info_key = 'non_methods';
 
    $info->{$rt_info_key}{apply} = $apply if $info;
 
@@ -65,9 +57,7 @@ sub import {
       my ($name, %attributes) = @_;
 
       _assert_no_banished_keywords( $target, $name );
-      $has->( $name => _filter_out_block_attributes( %attributes ) );
-      $meta->add_to_block_list( { name => $name,
-         _validate_and_filter_block_attributes( %attributes ) } );
+      $meta->add_to_block_list( { name => $name, %attributes } );
       return;
    };
 
@@ -81,11 +71,7 @@ sub import {
 
       for my $name (@{ $names }) {
          _assert_no_banished_keywords( $target, $name );
-         $has->( $name => _filter_out_field_attributes( %attributes ) );
-         $meta->add_to_field_list( {
-            name => $name,
-            _validate_and_filter_field_attributes( %attributes )
-         } );
+         $meta->add_to_field_list( { name => $name, %attributes } );
       }
 
       return;
@@ -101,10 +87,7 @@ sub import {
 
       for my $name (@{ $names }) {
          _assert_no_banished_keywords( $target, $name );
-         $has->( $name => _filter_out_page_attributes( %attributes ) );
-         $meta->add_to_page_list( {
-            name => $name, _validate_and_filter_page_attributes( %attributes )
-         } );
+         $meta->add_to_page_list( { name => $name, %attributes } );
       }
 
       return;
@@ -126,60 +109,6 @@ sub _assert_no_banished_keywords {
    }
 
    return;
-}
-
-sub _filter_out_block_attributes {
-   my %attributes = @_;
-   my %filter_key = map { $_ => 1 } @block_attributes;
-
-   return map { ( $_ => $attributes{ $_ } ) }
-         grep { not exists $filter_key{ $_ } } keys %attributes;
-}
-
-sub _validate_and_filter_block_attributes {
-   my (%attributes) = @_;
-
-   my %filtered = map { ( $_ => $attributes{ $_ } ) }
-      grep { exists $attributes{ $_ } } @block_attributes, 'required';
-
-   return %filtered;
-}
-
-sub _filter_out_field_attributes {
-   my %attributes = @_;
-   my %filter_key = map { $_ => 1 } @moo_attributes;
-
-   $attributes{is} //= 'ro';
-
-   return map { ( $_ => $attributes{ $_ } ) }
-         grep { exists $filter_key{ $_ } } keys %attributes;
-}
-
-sub _validate_and_filter_field_attributes {
-   my (%attributes) = @_;
-   my %filter_key = map { $_ => 1 } @moo_attributes;
-
-   my %filtered = map { ( $_ => $attributes{ $_ } ) }
-      grep { not exists $filter_key{ $_ } } keys %attributes;
-
-   return %filtered;
-}
-
-sub _filter_out_page_attributes {
-   my %attributes = @_;
-   my %filter_key = map { $_ => 1 } @page_attributes;
-
-   return map { ( $_ => $attributes{ $_ } ) }
-         grep { not exists $filter_key{ $_ } } keys %attributes;
-}
-
-sub _validate_and_filter_page_attributes {
-   my (%attributes) = @_;
-
-   my %filtered = map { ( $_ => $attributes{ $_ } ) }
-      grep { exists $attributes{ $_ } } @page_attributes, 'required';
-
-   return %filtered;
 }
 
 1;
